src/containers/dashboard/index.scss
.dash-content {
	h1, h2 {
		color: white;
		text-align: center;
	}

	h2 {
		margin-top: 15px;

		&.error-message {
			color: #db5151
		}
	}

	.dash-filters {
		display: flex;
		align-items: center;
		width: 100%;
		max-width: 600px;
		padding-left: 10px;
		margin-top: 10px;
		color: white;

		p {
			@media only screen and (max-width: 600px) {
				margin-right: 10px;
			}
		}

		.text-input {
				margin-left: auto
		}
	}

	.new-day {
		width: 100%;
		max-width: 600px;
		margin: 10px;
		text-align: center;
		border: 1px dashed #a1a1a1;
		color: #a1a1a1;
		border-radius: 10px;
		font-size: 30px;
		opacity: 0.7;
		user-select: none;
		transition: 0.3s;
		cursor: pointer;

		&:hover {
			opacity: 1;
			background: rgba(255, 255, 255, 0.05);
		}
	}

	.card {
		margin: 10px;
	}
}

